<resources>
    <string name="app_name">Biblioteca</string>

    <string name="Menu_panel">Panel</string>
    <string name="Menu_cuenta">Cuenta</string>

    <string name="Titulo_RL_Admin">Titulo</string>

    <string name="Txt_rol">Seleccione un Rol</string>
    <string name="Btn_rol_administrador">Administrador</string>
    <string name="Btn_rol_cliente">Cliente</string>

    <string name="TxtRegistroAdmin">Registro de administrador</string>
    <string name="Et_nombres_admin">Nombres</string>
    <string name="Et_email_admin">Email</string>
    <string name="Et_password_admin">Contraseña</string>
    <string name="Et_R_password_admin">Repite la contraseña</string>
    <string name="Btn_resgistrar_admin">Registrarme</string>
    <string name="Txt_tengo_cuenta">Tengo una cuenta</string>

    <string name="CerrarSesionAdmin">Cerrar sesion</string>

    <string name="TxtLoginAdmin">Login administrador</string>
    <string name="Btn_login_admin">Iniciar sesion</string>

    <string name="Btn_agregar_categoria">Agregar categoria</string>
    <string name="Txt_agregar_categoria">Agregar categoria</string>
    <string name="Et_categoria">Ingrese categoria</string>
    <string name="Agregar_categoria_Bd">Agregar</string>

    <string name="Item_nombre_cat_a">Nombre categoria</string>
    <string name="Buscar_categoria">Buscar categoria</string>

    <string name="Txt_agregar_libro">Agregar Libro</string>

    <string name="Et_titulo_libro">Título Libro</string>
    <string name="Et_descripcion_libro">Descripción Libro</string>
    <string name="Tv_categoria_libro">Categoría</string>
    <string name="Bt_subir_libro">Subir</string>

    <string name="Txt_titulo_libro">Libros</string>
    <string name="Txt_categoria_libro">Categoria</string>
    <string name="Et_buscar_libro_admin">Buscar Libro</string>

    <string name="Txt_titulo_libro_item">Titulo Libro</string>
    <string name="Txt_descripcion_libro_item">Descripcion Libro</string>
    <string name="Txt_categoria_libro_admin">Categoria</string>
    <string name="Txt_tamanio_libro_admin">5 MB</string>
    <string name="Txt_fecha_libro_admin">dd/MM/yyyy</string>

    <string name="Txt_actualizar_libro">Actualizar libro</string>
    <string name="Bt_actualizar_libro">Actualizar</string>

    <string name="Txt_detalle_libro">Detalle libro</string>

    <string name="titulo_libro_D">Titulo libro</string>
    <string name="Txt_categoria_D">Categoria:</string>
    <string name="categoria_D"> -- </string>
    <string name="Txt_fecha_D">Fecha:</string>
    <string name="fecha_D"> -- </string>
    <string name="Txt_tamanio_D">Tamaño:</string>
    <string name="tamanio_D"> -- </string>
    <string name="Txt_vistas_D">Vistas:</string>
    <string name="vistas_D"> -- </string>
    <string name="Txt_descargas_D">Descargas:</string>
    <string name="descargas_D"> -- </string>
    <string name="Txt_paginas_D">Paginas:</string>
    <string name="paginas_D"> -- </string>
    <string name="Txt_descripcion_D">Descripcion:</string>
    <string name="descripcion_D"> -- </string>

    <string name="Bt_leer_libro">Leer</string>

    <string name="Txt_leer_libro">Leer libro</string>

    <!--Perfil admin-->
    <string name="nombres_admin">Nombres: </string>
    <string name="Txt_nombres_admin"> -- </string>
    <string name="email_admin">Email: </string>
    <string name="Txt_email_admin"> -- </string>
    <string name="tiempo_registro_admin">Miembro desde: </string>
    <string name="Txt_tiempo_registro_admin"> -- </string>
    <string name="rol_admin">Rol: </string>
    <string name="Txt_rol_admin"> -- </string>
    <string name="Txt_mas_opciones">Mas opciones: </string>

    <string name="EditarPerfilAdmin">Editar perfil</string>
    <string name="Txt_editar_perfil_admin">Editar perfi</string>
    <string name="Et_a_nombres">Nombres</string>
    <string name="Bt_actualizar_info">Actualizar</string>


    <string name="TxtRegistroCliente">Registro de cliente</string>
    <string name="Et_nombres_cliente">Nombres</string>
    <string name="Et_edad_cliente">Edad</string>
    <string name="Et_email_cliente">Email</string>
    <string name="Et_password_cliente">Contraseña</string>
    <string name="Et_R_password_cliente">Repite la contraseña</string>
    <string name="Btn_resgistrar_cliente">Registrarme</string>
    <string name="Txt_tengo_cuenta_cliente">Tengo una cuenta</string>

    <!-- menu cliente -->
    <string name="Menu_dashboard_cliente">Panel</string>
    <string name="Menu_favoritos_cliente">Favoritos</string>
    <string name="Menu_cuenta_cliente">Cuenta</string>

    <string name="Titulo_RL_Cliente">Titulo</string>
    <string name="CerrarSesionCliente">Cerrar sesion</string>

    <!-- login cliente -->
    <string name="TxtLoginCliente">Login cliente</string>
    <string name="Btn_login_cliente">Iniciar sesion</string>

    <!-- login google -->
    <string name="Txt_alternativa">Alternativa</string>
    <string name="Btn_login_google">Ingresar con Google</string>

    <string name="Item_nombre_cat_cl">Nombre categoria</string>

    <string name="Et_buscar_libro_cliente">Buscar</string>

    <string name="Btn_leer_libro_C">Leer</string>

    <string name="Btn_descargar_libro_C">Descargar</string>

    <string name="Btn_favoritos">Favoritos</string>

    <string name="Btn_mas_vistos">Más vistos</string>

    <string name="Btn_mas_descargados">Mas descargados</string>

    <!--Perfil cliente-->
    <string name="nombres_cliente">Nombres: </string>
    <string name="Txt_nombres_cliente"> -- </string>
    <string name="email_cliente">Cliente: </string>
    <string name="Txt_email_cliente"> -- </string>
    <string name="tiempo_registro_cliente">Miembro desde: </string>
    <string name="Txt_tiempo_registro_cliente"> -- </string>
    <string name="edad_cliente">Edad: </string>
    <string name="Txt_edad_cliente"> -- </string>
    <string name="rol_cliente">Rol: </string>
    <string name="Txt_rol_cliente"> -- </string>
    <string name="Txt_mas_opciones_cliente">Mas opciones: </string>

    <string name="EditarPerfilCliente">Editar perfil</string>
    <string name="Txt_editar_perfil_cliente">Editar perfi</string>
    <string name="Et_c_nombres">Nombres</string>
    <string name="Bt_actualizar_info_cli">Actualizar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>