<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cliente.DetalleLibro_Cliente">

    <RelativeLayout
        android:id="@+id/toolbarRlDetalle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/m_toolbar_height">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Ib_regresar"
            android:src="@drawable/ic_regresar"
            android:background="@android:color/transparent"
            android:layout_centerVertical="true"
            android:padding="10dp" />

        <TextView
            android:id="@+id/Txt_detalle_libro"
            android:text="@string/Txt_detalle_libro"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#cccccc"
            android:layout_alignParentBottom="true"/>


    </RelativeLayout>

    <!--info libro-->
    <ScrollView
        android:layout_below="@id/toolbarRlDetalle"
        android:layout_above="@id/Opciones"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--Viusual PDF-->
                <RelativeLayout
                    android:id="@+id/pdfRl"
                    android:layout_marginEnd="5dp"
                    android:background="#cccccc"
                    android:layout_width="100dp"
                    android:layout_height="170dp">

                    <com.github.barteksc.pdfviewer.PDFView
                        android:id="@+id/VisualizadorPdf"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                </RelativeLayout>

                <!--titulo PDF-->
                <TextView
                    android:id="@+id/titulo_libro_D"
                    android:text="@string/titulo_libro_D"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@id/pdfRl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/titulo_libro_D"
                    android:layout_toEndOf="@id/pdfRl">

                    <!--categoria-->
                    <TableRow
                        android:layout_marginTop="5dp">
                        <TextView
                            android:text="@string/Txt_categoria_D"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"/>
                        <TextView
                            android:id="@+id/categoria_D"
                            android:text="@string/categoria_D"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"/>
                    </TableRow>

                    <!--fecha-->
                    <TableRow
                        android:layout_marginTop="5dp">
                        <TextView
                            android:text="@string/Txt_fecha_D"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"/>
                        <TextView
                            android:id="@+id/fecha_D"
                            android:text="@string/fecha_D"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"/>
                    </TableRow>

                    <!--tamanio-->
                    <TableRow
                        android:layout_marginTop="5dp">
                        <TextView
                            android:text="@string/Txt_tamanio_D"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"/>
                        <TextView
                            android:id="@+id/tamanio_D"
                            android:text="@string/tamanio_D"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"/>
                    </TableRow>

                    <!--vistas-->
                    <TableRow
                        android:layout_marginTop="5dp">
                        <TextView
                            android:text="@string/Txt_vistas_D"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"/>
                        <TextView
                            android:id="@+id/vistas_D"
                            android:text="@string/vistas_D"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"/>
                    </TableRow>

                    <!--descargas-->
                    <TableRow
                        android:layout_marginTop="5dp">
                        <TextView
                            android:text="@string/Txt_descargas_D"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"/>
                        <TextView
                            android:id="@+id/descargas_D"
                            android:text="@string/descargas_D"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"/>
                    </TableRow>

                    <!--n°pag-->
                    <TableRow
                        android:layout_marginTop="5dp">
                        <TextView
                            android:text="@string/Txt_paginas_D"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"/>
                        <TextView
                            android:id="@+id/paginas_D"
                            android:text="@string/paginas_D"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"/>
                    </TableRow>

                </TableLayout>

            </RelativeLayout>

            <TextView
                android:text="@string/Txt_descripcion_D"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/descripcion_D"
                android:text="@string/descripcion_D"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/Opciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <!--Leer libro-->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Bt_leer_libro_C"
        android:text="@string/Btn_leer_libro_C"
        android:drawableTop="@drawable/ic_leer_libro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        />

        <!--Descargar-->

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Btn_descargar_libro_C"
            android:text="@string/Btn_descargar_libro_C"
            android:drawableTop="@drawable/ic_descargar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Btn_favoritos"
            android:text="@string/Btn_favoritos"
            android:drawableTop="@drawable/ic_aregar_favorito"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />


    </androidx.appcompat.widget.LinearLayoutCompat>





</RelativeLayout>