<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragmentos_Admin.Fragment_Admin_cuenta">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/img_perfil_admin"
            android:src="@drawable/ic_img_perfil"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:scaleType="centerCrop"
            android:layout_width="120dp"
            android:layout_height="120dp"/>

        <!--nombres-->
        <TextView
            android:id="@+id/nombres_admin"
            android:text="@string/nombres_admin"
            android:layout_below="@id/img_perfil_admin"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/Txt_nombres_admin"
            android:text="@string/Txt_nombres_admin"
            android:layout_below="@id/img_perfil_admin"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--email-->
        <TextView
            android:id="@+id/email_admin"
            android:text="@string/email_admin"
            android:layout_below="@id/nombres_admin"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/Txt_email_admin"
            android:text="@string/Txt_email_admin"
            android:layout_below="@id/nombres_admin"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--timeregistro-->
        <TextView
            android:id="@+id/tiempo_registro_admin"
            android:text="@string/tiempo_registro_admin"
            android:layout_below="@id/email_admin"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/Txt_tiempo_registro_admin"
            android:text="@string/Txt_tiempo_registro_admin"
            android:layout_below="@id/email_admin"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--rol-->
        <TextView
            android:id="@+id/rol_admin"
            android:text="@string/rol_admin"
            android:layout_below="@id/tiempo_registro_admin"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/Txt_rol_admin"
            android:text="@string/Txt_rol_admin"
            android:layout_below="@id/tiempo_registro_admin"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_below="@id/rol_admin"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/Txt_mas_opciones"
                android:layout_marginBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!--editar info -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                app:cardCornerRadius="10dp"
                app:contentPadding="10dp">

                <TextView
                    android:id="@+id/EditarPerfilAdmin"
                    android:text="@string/EditarPerfilAdmin"
                    app:drawableStartCompat="@drawable/ic_editar_info"
                    app:drawableEndCompat="@drawable/ic_siguiente"
                    android:drawablePadding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>

            </com.google.android.material.card.MaterialCardView>

            <!--cerrar sesion-->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                app:cardCornerRadius="10dp"
                app:contentPadding="10dp">

                <TextView
                    android:id="@+id/CerrarSesionAdmin"
                    android:text="@string/CerrarSesionAdmin"
                    android:drawablePadding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:drawableStartCompat="@drawable/ic_cerrar_sesion"
                    app:drawableEndCompat="@drawable/ic_siguiente" />

            </com.google.android.material.card.MaterialCardView>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </RelativeLayout>




</ScrollView>